test/deprecated/string-write-error.good
string-write-error.chpl:2: error: string.write deprecated: use string.format or stringify
