test/deprecated/string-write-error.chpl
var s:string;
s.write(10);
writeln(s);
